--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bunyan": "^1.5.1",
     "connect": "3.4.0",
     "http-proxy": "^1.11.2",
+    "iconv-lite": "^0.4.12",
     "mkdirp": "0.5.0",
     "node-uuid": "1.4.3",
     "qs": "^5.1.0",
